# fastapi_deploy_tutorial

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  deploy.yml
app/: __init__.py  main.py
app/api/: __init__.py  hello.py  router.py
